change link for icons

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                   <a href="https://www.instagram.com/improvisedecho/" title="Instagram account" target="_blank">
                     <img src="./src/instagram-icon.png" class="socialmedia-icon">
                   </a>
-                  <a href="https://www.tiktok.com/@improvisedechobysimonab" title="Tiktok account" target="_blank">
+                  <a href="https://www.tiktok.com/@improvisedecho?is_from_webapp=1&sender_device=pc" title="Tiktok account" target="_blank">
                     <img src="./src/tik-tok-icon.png" class="socialmedia-icon">
                   </a>
                 </div>
